--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,11 @@
 </head>
 <body>
   <header>
-    <h1>{{ site.title }}</h1>
-    <p>{{ site.description }}</p>
+    <h1><a href="/">{{ site.title }}</a></h1>
+    <nav>
+      <a href="/">Home</a> |
+      <a href="/about">About</a>
+    </nav>
     <hr>
   </header>
 
@@ -17,7 +20,7 @@
 
   <footer>
     <hr>
-    <p>© 2025 My Awesome Website</p>
+    <p>© 2025 {{ site.title }}</p>
   </footer>
 </body>
 </html>
